--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	],
 	"dependencies" : {
 		"uglify-js" : "2.2.4",
-		"less" : "1.3.3",
+		"less" : "1.4.x",
 		"handlebars" : "1.0.12",
 		"cli-color" : "0.2.1"
 	},
